# sdv-dashboard-tihan

./: CMakeLists.txt  Main.qml  Main.qml.autosave  README.md  main.cpp
assets/html/: google_map.html
ui/BottomBar/: BottomBar.qml  HVACComponent.qml  LeftIcons.qml  RightIcons.qml  VolumeController.qml
ui/LeftScreen/: Battery.qml  IndicatorBar.qml  LeftScreen.qml  Musicplayer.qml
ui/RightScreen/: RightScreen.qml  RightScreen.qml.autosave
